# GraphViewer

./: .gitignore
app/: CMakeLists.txt
app/details/: Graphic.cpp  Graphic.h  GraphicController.cpp  GraphicController.h  ValueStorage.cpp  ValueStorage.h
app/public/: Graphics.cpp  Graphics.h
app/test/: main.cpp
app/ui/: ui.qrc
app/ui/mainWindow/: mainWindow.qml
app/ui/qmlSimple/: Graphic.qml  GraphicLegend.qml  graphicNode.qml
app/ui/utility/: ModelUtil.cpp  ModelUtil.h  Palette.cpp  Palette.h
app/uiModels/: GraphicsModel.cpp  GraphicsModel.h
doc/: maindesign.qmodel
